--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,12 +5,38 @@
   box-sizing: border-box;
 }
 
+li {
+  
+}
+
+h1, h2 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 body {
   margin: 33px;
+  font-family:verdana, arial, helvetica, sans-serif;
+  font-size:13px;
+  line-height:18px;
+}
+
+a{
+color:#000
+}
+
+a:hover {
+  color:#fff;
+  background-color:#000
 }
 
 p {
   margin: 33px;
+}
+
+td {
+  line-height:18px;
+  font-size:13px;
 }
 
 table td {
@@ -20,4 +46,43 @@ table td {
 .flash {
   margin: 33px;
   color: green;
+}
+
+.field_with_errors {
+  display: table;
+  background-color: red;
+  padding: 2px;
+}
+
+.new_book{
+  width: auto;
+}
+
+label {
+  display: block;
+}
+
+.field {
+  margin-bottom: 10px;
+}
+
+.action {
+  margin-bottom: 10px;
+}
+
+.error_explanation {
+  width:450px;
+  border: 2px solid red;
+  margin: 20px 0;
+  background-color: #f0f0f0;
+}
+
+.error_quantity {
+  margin: 0;
+  background-color: #c00;
+  color: #fff;
+}
+
+.error_message {
+  margin: 33px;
 }
