--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,15 +1,34 @@
 <h1>Editing Book</h1>
 
-<%= form_with model:@book, local:true do |f| %>
-  <div>
-    <h4>Title</h4>
-    <%= f.text_field :title %>
-    <h4>Body</h4>
-    <%= f.text_area :body %>
-  </div>
-  <div>
-    <%= f.submit 'Update Book' %>
+<% if @book.errors.any? %>
+  <div class="error_explanation">
+    <div class="error_quantity">
+      <%= @book.errors.count %> error prohibited this book from being saved:
+    </div>
+    <ul class="error_message">
+      <% @book.errors.full_messages.each do |message| %>
+      <li>
+        <%= message %>
+      </li>
+      <% end %>
+    </ul>
   </div>
 <% end %>
 
-<div><%= link_to "Show", book_path(@book) %>|<%= link_to "Back", books_path %></div>
+<%= form_with model:@book, local:true do |f| %>
+  <div>
+    <div class="field">
+      <%= f.label :title, 'Title' %>
+      <%= f.text_field :title %>
+    </div>
+    <div class="field">
+      <%= f.label :body, 'Body' %>
+      <%= f.text_area :body %>
+    </div>
+    <div class="action">
+      <%= f.submit 'Update Book' %>
+    </div>
+  </div>
+<% end %>
+
+<div><%= link_to "Show", book_path(@book) %> | <%= link_to "Back", books_path %></div>
