--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"></p>
+<div class="flash"><%= flash[:notice] %></div>
 <h1>Books</h1>
 
 <table>
@@ -16,29 +16,39 @@
         <td><%= book.body %></td>
         <td><%= link_to "Show", book_path(book.id) %></td>
         <td><%= link_to "Edit", edit_book_path(book.id) %></td>
-        <td><%= link_to "destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
+        <td><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<h2 class="new_book">New Book</h2>
+<h2>New Book</h2>
 
 <% if @book.errors.any? %>
-  <%= @book.errors.count %>1 error prohibited this book from being saved:
-  <% @book.errors.full_messages.each do |message| %>
-    <%= message %>
-  <% end %>
+  <div class="error_explanation">
+    <div class="error_quantity">
+      <%= @book.errors.count %> error prohibited this book from being saved:
+    </div>
+    <ul class="error_message">
+      <% @book.errors.full_messages.each do |message| %>
+      <li>
+        <%= message %>
+      </li>
+      <% end %>
+    </ul>
+  </div>
 <% end %>
 
-<%= form_with model:@book, local:true do |f| %>
-  <div>
-    <h4>Title</h4>
+<%= form_with model:@book, class: :new_book, local:true do |f| %>
+  <div class="field">
+    <%= f.label :title, 'Title' %>
     <%= f.text_field :title %>
-    <h4>Body</h4>
+  </div>
+  <div class="field">
+    <%= f.label :body, 'Body' %>
     <%= f.text_area :body %>
   </div>
-  <div>
+  <div class="action">
     <%= f.submit 'Create Book' %>
   </div>
 <% end %>
