--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,7 +9,7 @@
     <% end %>
 </div>
 
-<p>title<%= @book.title %></p>
-<p>body<%= @book.body %></p>
+<p><strong>title:</strong><%= @book.title %></p>
+<p><strong>body:</strong><%= @book.body %></p>
 
-<div><%= link_to "Edit", edit_book_path(@book) %>|<%= link_to "Back", books_path %></div>
+<div><%= link_to "Edit", edit_book_path(@book) %> | <%= link_to "Back", books_path %></div>
